# purchase_scraper

./: README.md  pyproject.toml  results.csv  smoke_results.csv
tests/: test_api.py  test_crawler.py  test_live_crawler.py  test_pacing.py  test_parsers.py
tests/fixtures/: common_223.html  common_44.html  documents_223.html  documents_44.html  lots_223.html  search_results_mixed.html
zakupki_crawler/: __init__.py  api.py  cli.py  crawler.py  models.py  pacing.py  parsers.py  utils.py
